--- a/index.html
+++ b/index.html
@@ -7,9 +7,21 @@
     <title>Scanline JS</title>
 </head>
 <body>
-   <h1 id="title">Scanline JS</h1> 
-   <h2>By: Luiz Felipe F. Rosa</h2>
-   <canvas id="canvas" width="800px" height="600px"></canvas>
+    <h1 id="title">Scanline JS</h1> 
+    <h2>By: Luiz Felipe F. Rosa</h2>
+    <section class="mainSection">
+        <canvas id="canvas" width="800px" height="600px"></canvas>
+        <div>
+            <h2>Lista de triângulos:</h2>
+            <ul class="triangleList">
+
+            </ul>
+        </div>
+    </section>
+   <br />
+   <button class="clearButton">Limpar canvas</button>
+   
+ 
    <script src="./script.js"></script>
 </body>
 </html>
