--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 </head>
 <body>
     <h1 id="title">Scanline JS</h1> 
-    <h2>By: Luiz Felipe F. Rosa</h2>
+    <h3>By: Luiz Felipe F. Rosa</h3>
     <section class="mainSection">
-        <canvas id="canvas" width="800px" height="600px"></canvas>
+        <canvas id="canvas" width="800px" height="800px"></canvas>
         <div>
             <h2>Lista de triângulos:</h2>
             <ul class="triangleList">
-
+                <li><span>Triângulo</span><span>V0</span><span>V1</span><span>V2</span><span>Aresta</span></li>
             </ul>
         </div>
     </section>
+
    <br />
    <button class="clearButton">Limpar canvas</button>
    <script src="./script.js"></script>
