--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <title>Scanline JS</title>
 </head>
 <body>
+<!-- 
     <h1 id="title">Scanline JS</h1> 
-    <h3>By: Luiz Felipe F. Rosa</h3>
+
+    <h3>By: Luiz Felipe F. Rosa</h3> -->
+
     <section class="mainSection">
-        <canvas id="canvas" width="800px" height="800px"></canvas>
+    <canvas id="canvas" width="800px" height="800px"></canvas>
+
         <div>
             <h2>Lista de triângulos:</h2>
             <ul class="triangleList">
